--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelArrangement" >
         <activity android:name=".MainActivity"/>
+        <activity android:name=".FormActivity"/>
         <activity
             android:name=".LoginActivity"
             android:exported="true" >
