--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.nbsp:materialfilepicker:1.9.1'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'androidx.navigation:navigation-fragment:2.4.0'
     implementation 'androidx.navigation:navigation-ui:2.4.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -49,4 +50,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
 
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    implementation "com.airbnb.android:lottie:5.0.2"
 }
