--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,19 @@
     <application
         android:allowBackup="true"
         android:usesCleartextTraffic="true"
-        android:icon="@drawable/ic_travel"
+        android:icon="@mipmap/iv_convergence_foreground"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_travel"
+        android:roundIcon="@mipmap/iv_convergence_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelArrangement" >
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".DetailImageActivity"/>
         <activity android:name=".MainActivity"/>
         <activity android:name=".FormActivity"/>
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".SearchActivity"/>
         <activity
-            android:name=".LoginActivity"
+            android:name=".SplashActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
